--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         <div id="map"></div>
         <div id="side-bar">
             <div id="static-box" class="box">
-                <div><canvas id="myChart"></canvas></div>
+                <div id="chartreport"><canvas id="myChart"></canvas></div>
             </div>
             <div id="hover-box" class="box">
                 <div>Latitude: <span id="lat"></span></div>
@@ -42,6 +42,7 @@
     <script src="js/leaflet-heatmap.js"></script>
     <script src="js/BoundaryCanvas.js"></script>
     <script src="js/leaflet.legend.js"></script>
+    <script src="js/leaflet.groupedlayercontrol.js"></script>
     <script src="js/chart.min.js"></script>
     <Script src="js/main.js"></Script>
 </body>
