--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,11 +25,22 @@
             <div id="static-box" class="box">
                 <div id="chartreport"><canvas id="myChart"></canvas></div>
             </div>
+
+            <div id="average-box" class="box" >
+                <div style="font-size: 20px"> Average Concentration</div>
+                <div >PM10: <span id="avg_pm10"></span> μg/m³</div>
+                <div>PM2.5: <span id="avg_pm25"></span> μg/m³</div>
+            </div>
+
             <div id="hover-box" class="box">
+                <div style="font-size: 20px;">Hover Over Point On The Map</div>
+                <div>Time: <span id="dtime"></span></div>
                 <div>Latitude: <span id="lat"></span></div>
                 <div>Longitude: <span id="lng"></span></div>
-                <div>PM10: <span id="pm10"></span></div>
-                <div>PM2.5: <span id="pm2_5"></span></div>
+                <div>PM10: <span id="pm10"></span> μg/m³</div>
+                <div>PM2.5: <span id="pm2_5"></span> μg/m³</div>
+                <div>Temperature: <span id="temp"></span> °C</div>
+                <div>Humidity: <span id="hum"></span> %</div>
             </div>
         </div>
     </div>
